force-app/main/default/objects/custom_create277__c/custom_create277__c.object-meta.xml
<CustomObject>
    <label>Custom created object277</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects277</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>