force-app/main/default/objects/custom_create277__c/fields/custom_create_277field600__c.field-meta.xml
<CustomField>
    <fullName>custom_create_277field600__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 277field600</label>
    <type>Checkbox</type>
</CustomField>